--- a/IKTS.css
+++ b/IKTS.css
@@ -1,1 +1,10 @@
 /* CSS declarations go here */
+
+.fixture-details a {
+    color: black;
+}
+
+.fixture-details a:hover{
+    cursor: pointer;
+}
+
