Revert 0287ff6..706fcd9
This rolls back to commit 0287ff61310e655da74550d5df555cc5165663a6.

--- a/client/templates/Search/search.html
+++ b/client/templates/Search/search.html
@@ -1,23 +1,14 @@
 <template name="search">
-
+                
     <div class="fixtures ui center aligned page grid">
         <h3>Fixtures this week</h3>
     </div>
     <div class="ui segment">
-        <div class="ui active inverted dimmer">
-            <div class="ui text large loader">Loading</div>
-        </div>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
+      <div class="ui active dimmer">
+        <div class="ui text loader">Loading</div>
+      </div>
+      <p></p>
+      <p></p>
+      <p></p>
     </div>
 </template>
